<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
    <item android:id="@+id/home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/home"/>
    <item android:id="@+id/suggest"
        android:icon="@mipmap/ic_restaurant_menu_black_24dp"
        android:title="@string/menu1"/>
    <item android:id="@+id/shopping"
        android:icon="@mipmap/ic_shopping_basket_black_24dp"
        android:title="@string/menu2"/>
    <item android:id="@+id/group"
        android:icon="@mipmap/ic_group_black_24dp"
        android:title="@string/menu3"/>
    </group>

    <item android:title="Exit">
        <menu>
            <item android:id="@+id/exit"
            android:icon="@mipmap/logout"
            android:title="@string/menu4"/>
        </menu>
    </item>


</menu>