<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yon.project60.MainActivity">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="9dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adddata" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="46dp"
                        android:layout_weight="0"
                        android:text="@string/types"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="45dp"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="87dp"
                        android:text="@string/username"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:ems="8"
                        android:hint="ชื่อสินค้า" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/username1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_weight="0"
                        android:text="@string/amount"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0"
                        android:ems="4"
                        android:hint="1,2,3..." />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="45dp"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/MFG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0"
                        android:text="@string/exe"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/rbchoosedate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/radioButton1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="4dp"
                                android:onClick="rbClick" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:onClick="rbClick" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="yyyy-mm-dd" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/editTextdate"
                            android:text=" ฐานข้อมูล"
                            android:textColor="#000000" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>



            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:onClick="AddMenu"
                android:text="@string/success" />

            <ImageView
                android:id="@+id/imagepicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:src="@drawable/photo" />

            <TextView
                android:id="@+id/output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button3"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textColor="#ff4d8a" />
            <TextView
                android:id="@+id/avgoutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/output"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textColor="#ff4d8a" />
        </RelativeLayout>
    </FrameLayout>


    <!-- The navigation drawer -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:orientation="vertical">

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu">

        </android.support.design.widget.NavigationView>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>